--- a/css/main.css
+++ b/css/main.css
@@ -15,9 +15,16 @@ body {
   height: 100%;
 }
 
+.fix-bottom {
+  position: fixed;
+  bottom: 0;
+  width: 100%;
+  height: 100px;
+}
+
 .center {
   position: absolute;
-  width: 50%;
+  height: 90%;
   margin: auto;
   top: 0; left: 0; right: 0; bottom: 0;
 }
