--- a/css/main.css
+++ b/css/main.css
@@ -13,6 +13,14 @@ body {
   position: relative;
   width: 100%;
   height: 100%;
+  box-sizing: border-box;
+  padding: 10px;
+}
+
+#log {
+  width: 100%;
+  box-sizing: border-box;
+  font-size: 0.5em;
 }
 
 .fix-bottom {
