--- a/css/main.css
+++ b/css/main.css
@@ -12,15 +12,23 @@ body {
 .container {
   position: relative;
   width: 100%;
-  height: 100%;
+  height: calc(100% - 100px);
   box-sizing: border-box;
   padding: 10px;
+  overflow: scroll;
+}
+
+#chart {
+  width: 100%;
+  height: 450px;
+  box-sizing: border-box;
 }
 
 #log {
   width: 100%;
   box-sizing: border-box;
   font-size: 0.5em;
+  margin-top: 5px;
 }
 
 .fix-bottom {
